Fix mobile layout: horizontal scrollbars (FF) and td alignment

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -856,33 +856,35 @@ img.emojione {
         padding-bottom: 0;
     }
 
-    #bufferlines tr.bufferline {
+    #bufferlines > table,
+    #bufferlines > table > tbody {
+        display: block;
+    }
+
+    #bufferlines tr {
+        padding: 0px 3px;
         display: block;
         overflow: hidden;
     }
 
-    #bufferlines td.time {
-        display: inline-block;
-        padding-right: 3px;
+    #bufferlines tr td {
+        padding: 0px;
+        display: inline;
+        vertical-align: initial;
+    }
+
+    #bufferlines tr.bufferline td.time {
         font-size: 0.8em;
     }
 
-    #bufferlines td.time span.date {
-        display: block;
-        margin-bottom: -1px;
-    }
-
-    #bufferlines td.prefix {
-        display: inline;
-        padding-right: 5px;
+    #bufferlines tr.bufferline td.prefix {
         border: 0;
         font-weight: bold;
         font-size: 1.06em;
     }
 
-    #bufferlines td.message {
-        display: inline;
-        padding: 0px !important;
+    #bufferlines tr.bufferline td.message {
+        overflow-wrap: break-word;
     }
 
     .gb-modal .modal-dialog {
